--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -19,7 +19,7 @@
 }
 
 .frontpage-row:hover {
-    background-color: rgba(238, 238, 238, 0.739);
+    background-color: rgba(238, 238, 238, 0.68);
     border: 1px solid white;
 }
 
